[package]
name = "iced-project"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector@hecrj.dev>"]
edition = "2021"
publish = false

[dependencies]
iced = {version = "0.12.1", features = ["highlighter", "tokio", "debug" ,"advanced"]}
rfd = "0.14.1"
tokio = { version = "1.39.2", features = ["fs"] }





